# sync-manager

./: .gitignore  Cargo.toml  README.md  bootstrap-git.py  build.rs  sync-manager.yaml
_shared-resources/shared-rust/: Rust-TUI-Structure.md
_shared-resources/shared-rust/resources/components/: Cargo.toml  README.md
_shared-resources/shared-rust/resources/components/src/: lib.rs
_shared-resources/shared-rust/resources/components/src/core/: mod.rs  rect_handle.rs
_shared-resources/shared-rust/resources/components/src/elements/: base_layout.rs  file_browser.rs  form_panel.rs  list_panel.rs  mod.rs  popup.rs  split_diff_view.rs  tab_bar.rs  toast.rs
_shared-resources/shared-rust/resources/components/src/managers/: bounding_box.rs  mod.rs  tab_bar.rs
_shared-resources/shared-rust/resources/components/src/managers/split_diff/: diff_algorithms.rs  line_wrapping.rs  mod.rs  rendering.rs
_shared-resources/shared-rust/resources/components/src/utilities/: helpers.rs  layout_calculator.rs  mod.rs  syntax_highlighting.rs
_shared-resources/shared-rust/resources/examples/: Cargo.toml  README.md  Untitled-3.md  config.yaml
_shared-resources/shared-rust/resources/examples/src/: LayoutDemo__TabbedManager.rs  file1.md  file2.md  tab_bar_example.rs  tab_bar_positioning_example.rs  tab_bar_styles_example.rs  x_base_layout_example.rs
src/: config.rs  config.yaml  config_validation.rs  constants.rs  dashboard.rs  lib.rs  main.rs
src/core/: app.rs  app_config.rs  events.rs  mod.rs  project_config.rs
src/operations/: diff.rs  git.rs  mod.rs  sync.rs
src/render/: content.rs  dashboard.rs  mod.rs  sync_content.rs
src/ui/: app_view.rs  diff_list.rs  diff_view.rs  mod.rs  side_by_side.rs  styles.rs
src/utilities/: mod.rs  paths.rs  patterns.rs
