[package]
name = "sync-manager"
version = "0.1.0"
edition = "2021"
authors = ["Dev-Boards Project"]
description = "Terminal UI for managing file synchronization across projects"

[lib]
name = "sync_manager"
path = "src/lib.rs"

[[bin]]
name = "sync-manager"
path = "src/main.rs"

[dependencies]
# Shared components (path dependency)
tui-components = { path = "_shared-resources/shared-rust/resources/components" }

# TUI framework
ratatui = "0.29"
crossterm = "0.29"

# File system and path handling
walkdir = "2.4"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (for future git operations)
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "process"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
