[package]
name = "tui-components"
version = "0.1.0"
edition = "2021"
authors = ["FocusTorn <FocusTorn@gmail.com>"]
license = "MIT"
description = "Shared TUI components for Rust terminal user interfaces"

[lib]
name = "tui_components"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[features]
default = []
syntax-highlighting = ["syntastica", "syntastica-parsers", "syntastica-themes", "regex"]

[dependencies.syntastica]
version = "0.3"
optional = true

[dependencies.syntastica-parsers]
version = "0.3"
optional = true
features = ["all"]

[dependencies.syntastica-themes]
version = "0.3"
optional = true

[dependencies.regex]
version = "1.0"
optional = true
